fixed the z-indexes

--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Saira", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Saira", sans-serif;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type="number"] {
-    -moz-appearance: textfield;
-    appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 body {
@@ -39,7 +39,7 @@ div#radar {
   transition: all 0.1s ease-in-out;
   display: flex;
   flex-direction: column;
-  z-index: 100;
+  z-index: 5;
 }
 
 div#radar.bigger {
@@ -60,7 +60,7 @@ div#radar>button {
   position: relative;
   margin-bottom: 5px;
   padding: 0.5em 1em;
-  z-index: 100;
+  z-index: 5;
 }
 
 div#radar>div#radarContainer {
@@ -82,7 +82,7 @@ div#searchBarContainer {
   border-radius: 5px;
   width: 600px;
   max-width: 600px;
-  z-index: 100;
+  z-index: 5;
 }
 
 div#searchBarContainer>input {
@@ -127,137 +127,137 @@ div#searchBarContainer>div#searchResultsContainer>div.searchResult:hover {
 }
 
 .meteorCreatorBtn {
-    padding: 0.5em 1em;
-    position: absolute;
-    bottom: 5em;
-    left: 6em;
-    z-index: 100;
+  padding: 0.5em 1em;
+  position: absolute;
+  bottom: 5em;
+  left: 6em;
+  z-index: 6;
 }
 
 .meteor-creator {
-    background-color: #40424750;
-    color: white;
-    position: absolute;
-    border-radius: 0.5em;
-    left: 5em;
-    padding: 2em 24px;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    top: 10%;
-    display: none;
+  background-color: #40424750;
+  color: white;
+  position: absolute;
+  border-radius: 0.5em;
+  left: 5em;
+  padding: 2em 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  top: 10%;
+  display: none;
 }
 
 .meteor-creator.active {
-    display: block;
+  display: block;
 }
 
 .meteor-creator h2 {
-    text-align: center;
-    font-size: 1.25em;
+  text-align: center;
+  font-size: 1.25em;
 }
 
 .meteor-creator .display-container {
-    display: flex;
-    align-items: center;
-    gap: 1em;
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
 
 .meteor-creator .display-container .display {
-    width: 100%;
-    height: 14em;
-    background-color: #121212;
-    border-radius: 0.5em;
+  width: 100%;
+  height: 14em;
+  background-color: #121212;
+  border-radius: 0.5em;
 }
 
 .meteor-creator .display-container .arrow {
-    width: 1.3em;
-    height: 1.3em;
-    cursor: pointer;
-    transition: scale 250ms ease;
+  width: 1.3em;
+  height: 1.3em;
+  cursor: pointer;
+  transition: scale 250ms ease;
 }
 
 .meteor-creator .display-container .arrow:hover {
-    scale: 1.15;
+  scale: 1.15;
 }
 
 .meteor-creator .display-container .arrow img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .meteor-creator .categories {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
 }
 
 .parameters {
-    border-radius: 0.5em;
-    padding: 0.5em 0;
-    width: 100%;
+  border-radius: 0.5em;
+  padding: 0.5em 0;
+  width: 100%;
 }
 
 .parameters h3 {
-    text-align: center;
+  text-align: center;
 }
 
 .parameters .categories .category {
-    padding: 0px 1em;
-    padding-bottom: 0.5em;
-    border-bottom: 2px solid black;
-    cursor: pointer;
-    transition: border-bottom 0.5s ease;
-    width: 50%;
-    text-align: center;
+  padding: 0px 1em;
+  padding-bottom: 0.5em;
+  border-bottom: 2px solid black;
+  cursor: pointer;
+  transition: border-bottom 0.5s ease;
+  width: 50%;
+  text-align: center;
 }
 
 .parameters .categories .category.active {
-    border-bottom: 2px solid white;
+  border-bottom: 2px solid white;
 }
 
 .parameters .inputs {
-    width: 100%;
-    display: flex;
-    overflow: hidden;
+  width: 100%;
+  display: flex;
+  overflow: hidden;
 }
 
 .parameters .inputs .variant {
-    flex-shrink: 0;
-    transition: transform 0.5s ease;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    color: #afb0b6;
-    font-weight: 500;
+  flex-shrink: 0;
+  transition: transform 0.5s ease;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  color: #afb0b6;
+  font-weight: 500;
 }
 
 .parameters .inputs .variant input {
-    outline: none;
-    padding: 0.5em 1em;
-    width: 10em;
-    background: none;
-    border: 1px solid #afb0b628;
-    border-radius: 0.25em;
-    color: white;
-    font-size: 1em;
-    text-align: right;
+  outline: none;
+  padding: 0.5em 1em;
+  width: 10em;
+  background: none;
+  border: 1px solid #afb0b628;
+  border-radius: 0.25em;
+  color: white;
+  font-size: 1em;
+  text-align: right;
 }
 
 .meteor-creator .close-btn {
-    cursor: pointer;
-    position: absolute;
-    top: 2em;
-    right: 2em;
-    width: 1.25em;
-    height: 1.25em;
-    transition: scale 250ms ease-out;
+  cursor: pointer;
+  position: absolute;
+  top: 2em;
+  right: 2em;
+  width: 1.25em;
+  height: 1.25em;
+  transition: scale 250ms ease-out;
 }
 
 .meteor-creator .close-btn:hover {
-    scale: 1.1;
+  scale: 1.1;
 }
 
 .meteor-creator .close-btn img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
