--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -11,7 +11,7 @@
     left: 50%;
     transform: translate(-50%);
     color: white;
-    z-index: 999;
+    z-index: 5;
 }
 
 .time-slider .slider {
